	- fix erreur stock mini si quantité en stock est à 0.

Améliorations:
	- Ajout de possibilité de filtre pour les découverts.
	- Améliortation de la description du type stockage (ajout libre service et surface)
	- Ajout de liens d'export sur xmstats, l'ancien système d'export est supprimé.

Sécurités:
	- /
-------------------------------------------------
Version: 1.3.1 Stable
Date:    05.03.2025
-------------------------------------------------
Correction de bogues:
	- Pas de visualisationn des emprunteurs si le type d'article n'est pas sur emprunt
	- La colonne action est supprimée dans la liste des commandes livrées (en gestion de commande)
	- Sur la page de transfert avec la visulisation des transferts d'un article, l'utilisation des filtres perdait l'article sélectionné.

Améliorations:
	- Améliortation de la description du type stockage (ajout libre service et surface)
	- Ajout du nom du stock dans les blocs
	- Ajout du nom du stock dans les commandes
	- L'id de la catégorie n'est plus nécessaire dans le lien d'un article (xmarticle).

Sécurités:
	- /
-------------------------------------------------
Version: 1.3.0 Stable
Date:    10.11.2024
-------------------------------------------------
Correction de bogues:
	- le split de commande ne fonctionnait pas avec les mml.

Améliorations:
	- Ajout d'une option pour qu'un article ne soit pas commandable
	- Ajout du système de gestion des plaques
	- Changement ordre affichage du bloc des emprunteurs

Sécurités:
	- /

-------------------------------------------------
Version: 1.2.0 Stable
Date:    27.10.2024
-------------------------------------------------
Correction de bogues:
	- Le total d'un article était faux si il y était en libre service.
    - Le transfert d'un article en libre service n'ajoute pas de quantité au stock.

Améliorations:
	- Nouveau système pour les transferts (formulaire)
    - Ajout du système de stock minimum

Sécurités:
	- /
-------------------------------------------------