@@ -18,13 +18,13 @@
  */
 define('_MB_XMSTOCK_AREA', 'Zone de stockage à afficher:');
 define('_MB_XMSTOCK_ALLAREA', 'Afficher toutes les zones de stockage');
-define('_MB_XMSTOCK_NBARTICLES', 'Nombre d\'articles à afficher');
+define('_MB_XMSTOCK_NBARTICLES', 'Nombre de composants à afficher');
 define('_MB_XMSTOCK_NBLOANS', 'Nombre d\'emprunts à afficher');
 define('_MB_XMSTOCK_NBORDER', 'Nombre de commandes à afficher');
 define('_MB_XMSTOCK_NBTRANSFERT', 'Nombre de transferts à afficher');
 define('_MB_XMSTOCK_NOLOAN', 'Pas d\'emprunt à afficher');
 define('_MB_XMSTOCK_NOORDER', 'Pas de commande à afficher');
-define('_MB_XMSTOCK_NOOVERDRAFT', 'Pas d\'articles en dessous du montant minimum');
+define('_MB_XMSTOCK_NOOVERDRAFT', 'Pas de composants en dessous du montant minimum');
 define('_MB_XMSTOCK_NOTRANSFER', 'Pas de transfert en attente de validation');
 define('_MB_XMSTOCK_SORTAMOUNT', 'Tri par montant:');
 define('_MB_XMSTOCK_SORTDATE', 'Tri par date:');
