@@ -67,28 +67,28 @@ define('_MA_XMSTOCK_INDEXCONFIG_XMPROD_WARNINGNOTACTIVATE', 'Vous devez activer 
 
 // Error message
 define('_MA_XMSTOCK_ERROR_AMOUNT', 'La Quantité doit être un nombre');
-define('_MA_XMSTOCK_ERROR_ARTICLEID', 'Il n\'y a pas d\'article sélectionné');
+define('_MA_XMSTOCK_ERROR_ARTICLEID', 'Il n\'y a pas de composant sélectionné');
 define('_MA_XMSTOCK_ERROR_LOCATION', 'L\'emplacement n\'est pas défini');
 define('_MA_XMSTOCK_ERROR_NACTIVE', 'Erreur: Le contenu est désactivé!');
 define('_MA_XMSTOCK_ERROR_NOAREA', 'Il n\'y a pas de zones de stockage dans la base de données');
-define('_MA_XMSTOCK_ERROR_NOARTICLE', 'Il n\'y a pas d\'article, il est nécessaire d\'avoir au minimum un article!');
+define('_MA_XMSTOCK_ERROR_NOARTICLE', 'Il n\'y a pas de composant, il est nécessaire d\'avoir au minimum un composant!');
 define('_MA_XMSTOCK_ERROR_NOLOAN', 'Il n\'y a pas de prêt dans la base de données');
 define('_MA_XMSTOCK_ERROR_NOORDER', 'Il n\'y a pas de commande dans la base de données');
 define('_MA_XMSTOCK_ERROR_NOOUTPUT', 'Il n\'y a pas de sorties dans la base de données');
 define('_MA_XMSTOCK_ERROR_NOPRICE', 'Pas de prix dans la base de donnée');
 define('_MA_XMSTOCK_ERROR_NOSTOCK', 'Il n\'y a pas de stock dans la base de données');
 define('_MA_XMSTOCK_ERROR_NOTRANSFER', 'Il n\'y a pas de transferts dans la base de données');
-define('_MA_XMSTOCK_ERROR_ONEARTICLE', 'Vous devez avoir au minimum un article (pas de valeur 0 sur l\'article restant)');
+define('_MA_XMSTOCK_ERROR_ONEARTICLE', 'Vous devez avoir au minimum un composant (pas de valeur 0 sur le composant restant)');
 define('_MA_XMSTOCK_ERROR_ORDER_DEL', 'Vous ne pouvez pas supprimer cette commande !');
 define('_MA_XMSTOCK_ERROR_PRICE', 'Le prix doit être un nombre et supérieur à 0');
 define('_MA_XMSTOCK_ERROR_SIZE', "La taille dans les préférences du module (taille maximale des fichiers téléchargés) dépasse les valeurs maximales définies dans 'post_max_size' ou 'upload_max_filesize' dans la configuration du fichier php.ini.");
-define('_MA_XMSTOCK_ERROR_SPLIT', 'Vous ne pouvez pas spliter l\'article complet (il n\'y a qu\'un article...)');
+define('_MA_XMSTOCK_ERROR_SPLIT', 'Vous ne pouvez pas spliter le composant complet (il n\'y a qu\'un composant...)');
 define('_MA_XMSTOCK_ERROR_TRANSFER_AR_AREAID', 'Il n\'y a pas de stock de destination sélectionné');
 define('_MA_XMSTOCK_ERROR_TRANSFER_ST_AREAID', 'Il n\'y a pas de stock de départ sélectionné');
 define('_MA_XMSTOCK_ERROR_TRANSFER_ST_TO_AR', 'Les stocks de départ et d\'arrivée sont identiques');
 define('_MA_XMSTOCK_ERROR_TRANSFER_OUTPUT', 'Vous devez choisir un destinataire externe <b>ou</b> interne. Pas les deux!');
 define('_MA_XMSTOCK_ERROR_TRANSFER_OUTPUTID', 'Il n\'y a pas de sortie sélectionnée');
-define('_MA_XMSTOCK_ERROR_TRANSFER_NOARTICLE', 'L\'article sélectionné n\'est pas disponible dans le stock sélectionné');
+define('_MA_XMSTOCK_ERROR_TRANSFER_NOARTICLE', 'Le composant sélectionné n\'est pas disponible dans le stock sélectionné');
 define('_MA_XMSTOCK_ERROR_TRANSFER_TBAMOUNT', 'La quantité demandée (%s) est plus importante que celle disponible (%s)');
 define('_MA_XMSTOCK_ERROR_USER', 'Aucun utilisateur séléctionné');
 define('_MA_XMSTOCK_ERROR_WEIGHT', 'Le poids doit être un nombre');
@@ -125,9 +125,9 @@ define('_MA_XMSTOCK_AREA_WEIGHT', 'Poids');
 // stock
 define('_MA_XMSTOCK_STOCK_AMOUNT', 'Quantité en stock');
 define('_MA_XMSTOCK_STOCK_AREA', 'Stock');
-define('_MA_XMSTOCK_STOCK_ARTICLE', 'Articles en stock');
-define('_MA_XMSTOCK_STOCK_DEL', 'Supprimer définitivement l\'article du stock');
-define('_MA_XMSTOCK_STOCK_DEL_DESC', 'Attention, l\'article ne sera plus dans ce stock et l\'historique des prix sera perdu!');
+define('_MA_XMSTOCK_STOCK_ARTICLE', 'Composants en stock');
+define('_MA_XMSTOCK_STOCK_DEL', 'Supprimer définitivement le composant du stock');
+define('_MA_XMSTOCK_STOCK_DEL_DESC', 'Attention, le composant ne sera plus dans ce stock et l\'historique des prix sera perdu!');
 define('_MA_XMSTOCK_STOCK_FREE', 'Libre service');
 define('_MA_XMSTOCK_STOCK_LENGHT', 'Long. (mm)');
 define('_MA_XMSTOCK_STOCK_LOAN', '<span class="fa fa-exchange"></span> Emprunt');
@@ -139,7 +139,7 @@ define('_MA_XMSTOCK_STOCK_ORDER', 'Désactiver la commande');
 define('_MA_XMSTOCK_STOCK_ORDER_DESC', 'Cette option permet de désactiver la commande');
 define('_MA_XMSTOCK_STOCK_SURFACE', 'Surface (mm²)');
 define('_MA_XMSTOCK_STOCK_TYPE', 'Type');
-define('_MA_XMSTOCK_STOCK_TYPE_DESC', 'L\'option linéaire (mml) est utilisée pour de la matière stocké sous forme de profilé linéaire.<br>L\'option emprunt permet d\'activer le système de prêt de l\'article.<br>L\'option libre service désactive le suivi des quantités.<br>L\'option surface (mm²) est utilisée pour de la matière stocké sous forme de plaque.');
+define('_MA_XMSTOCK_STOCK_TYPE_DESC', 'L\'option linéaire (mml) est utilisée pour de la matière stocké sous forme de profilé linéaire.<br>L\'option emprunt permet d\'activer le système de prêt du composant.<br>L\'option libre service désactive le suivi des quantités.<br>L\'option surface (mm²) est utilisée pour de la matière stocké sous forme de plaque.');
 define('_MA_XMSTOCK_STOCK_STANDARD', 'Standard (Qté)');
 define('_MA_XMSTOCK_STOCK_WIDTH', 'Larg. (mm)');
 
@@ -154,7 +154,7 @@ define('_MA_XMSTOCK_TRANSFER_ALL', 'Tous les transferts');
 define('_MA_XMSTOCK_TRANSFER_AMOUNT', 'Quantité');
 define('_MA_XMSTOCK_TRANSFER_AMOUNT_DSC', 'Si il s\'agit d\'une quantité en "Linéaire (mml)", il faut entrer la quantité en millimètre. Pour "Surface (mm²)" en millimètre²');
 define('_MA_XMSTOCK_TRANSFER_ARAREA', 'Stock de destination');
-define('_MA_XMSTOCK_TRANSFER_ARTICLE', 'Article à transférer');
+define('_MA_XMSTOCK_TRANSFER_ARTICLE', 'Composant à transférer');
 define('_MA_XMSTOCK_TRANSFER_DATE', 'Date');
 define('_MA_XMSTOCK_TRANSFER_DESC', 'Description du transfert');
 define('_MA_XMSTOCK_TRANSFER_DESTINATION', 'Destination');
@@ -163,9 +163,9 @@ define('_MA_XMSTOCK_TRANSFER_INFORMATION', 'Transfer Information');
 define('_MA_XMSTOCK_TRANSFER_LIST_WARNING', 'Transferts en attente de validation');
 define('_MA_XMSTOCK_TRANSFER_LOAN', 'Créer un prêt');
 define('_MA_XMSTOCK_TRANSFER_LOCATION', 'Emplacement');
-define('_MA_XMSTOCK_TRANSFER_LOCATION_DSC', 'Emplacement de l\'article dans le stock');
+define('_MA_XMSTOCK_TRANSFER_LOCATION_DSC', 'Emplacement du composant dans le stock');
 define('_MA_XMSTOCK_TRANSFER_NEEDSYEAR', 'Période du besoin');
-define('_MA_XMSTOCK_TRANSFER_NEEDSYEAR_DSC', 'Cet article est dans le plan de production, vous devez indiquer pour quelle période est votre besoin');
+define('_MA_XMSTOCK_TRANSFER_NEEDSYEAR_DSC', 'Ce composant est dans le plan de production, vous devez indiquer pour quelle période est votre besoin');
 define('_MA_XMSTOCK_TRANSFER_OUTPUT', 'Destinataire');
 define('_MA_XMSTOCK_TRANSFER_OUTPUT_DSC', 'Vous devez choisir un destinataire externe ou interne. Un seul choix entre les deux possibilités');
 define('_MA_XMSTOCK_TRANSFER_OUTPUTID', 'Destinataire externe');
@@ -185,7 +185,7 @@ define('_MA_XMSTOCK_TRANSFER_USER', 'Auteur du transfert');
 define('_MA_XMSTOCK_PERMISSION_MANAGE', 'Autorisation de gestion');
 define('_MA_XMSTOCK_PERMISSION_MANAGE_DSC', 'Choisissez les groupes qui peuvent gérer ces zones de stockage');
 define('_MA_XMSTOCK_PERMISSION_ORDER', 'Autorisation de commander');
-define('_MA_XMSTOCK_PERMISSION_ORDER_DSC', 'Choisissez les groupes qui peuvent commander des articles dans ces zones de stockage');
+define('_MA_XMSTOCK_PERMISSION_ORDER_DSC', 'Choisissez les groupes qui peuvent commander des composants dans ces zones de stockage');
 define('_MA_XMSTOCK_PERMISSION_OTHER', 'Autres autorisations');
 define('_MA_XMSTOCK_PERMISSION_OTHER_DSC', 'Sélectionnez des groupes qui peuvent :');
 define('_MA_XMSTOCK_PERMISSION_OTHER_4', 'Permission de voir le prix');
@@ -198,7 +198,7 @@ define('_MA_XMSTOCK_RENDERSTOCKS_PRICE', 'Prix: %s CHF');
 define('_MA_XMSTOCK_RENDERSTOCKS_TOTAL', 'Total: ');
 
 // user
-define('_MA_XMSTOCK_AREA_THEREAREARTICLE', 'Il y a <strong>%s</strong> articles dans cette zone de stockage !');
+define('_MA_XMSTOCK_AREA_THEREAREARTICLE', 'Il y a <strong>%s</strong> composants dans cette zone de stockage !');
 define('_MA_XMSTOCK_CADDY', 'Panier');
 define('_MA_XMSTOCK_HOME', 'Page d\'accueil');
 define('_MA_XMSTOCK_VIEWORDER', 'Visualisation de la commande');
@@ -213,16 +213,16 @@ define('_MA_XMSTOCK_CHECKOUT_DELIVERY_WITHDRAWAL', 'Retrait');
 define('_MA_XMSTOCK_CHECKOUT_DELIVERY_DELIVERY', 'Livraison');
 define('_MA_XMSTOCK_CHECKOUT_DORDER', 'Date souhaitée');
 define('_MA_XMSTOCK_CHECKOUT_DORDER_DSC', '<div class="alert alert-warning">Le délai standard pour une livraison est de %s jours ouvrés!</div>');
-define('_MA_XMSTOCK_CHECKOUT_ERRORQTY', 'La quantité demandée pour les articles avec le logo <span class="badge badge-pill badge-danger">Erreur</span> est supérieure à celle disponible en stock. <br>Cela n\'est pas possible dans le cas d\'un emprunt! La quantité a donc été adaptée.');
-define('_MA_XMSTOCK_CHECKOUT_INFORMATION', 'Merci de rendre les articles avec le logo <span class="badge badge-pill badge-light">' . _MA_XMSTOCK_STOCK_LOAN . '</span> dans des délais raisonnables');
+define('_MA_XMSTOCK_CHECKOUT_ERRORQTY', 'La quantité demandée pour les composants avec le logo <span class="badge badge-pill badge-danger">Erreur</span> est supérieure à celle disponible en stock. <br>Cela n\'est pas possible dans le cas d\'un emprunt! La quantité a donc été adaptée.');
+define('_MA_XMSTOCK_CHECKOUT_INFORMATION', 'Merci de rendre les composants avec le logo <span class="badge badge-pill badge-light">' . _MA_XMSTOCK_STOCK_LOAN . '</span> dans des délais raisonnables');
 define('_MA_XMSTOCK_CHECKOUT_INPUTINF', 'Informations sur la commande');
 define('_MA_XMSTOCK_CHECKOUT_SEND', 'Commande envoyée');
 define('_MA_XMSTOCK_CHECKOUT_CONFIRM', 'Confirmation');
 define('_MA_XMSTOCK_CHECKOUT_CONFIRM_SEND', 'Votre commande a bien été envoyée avec les informations suivantes :');
 define('_MA_XMSTOCK_CHECKOUT_SUMMARY', 'Récapitulatif de votre panier');
 define('_MA_XMSTOCK_CHECKOUT_VIEW', 'Suivre cette commande');
-define('_MA_XMSTOCK_CHECKOUT_WARNINGQTY', 'La quantité demandée pour les articles avec le logo <span class="badge badge-pill badge-warning">Avertissement</span> est supérieure à celle disponible en stock. <br>Le délai de livraison pourrait être plus long !');
-define('_MA_XMSTOCK_CHECKOUT_WARNINGQTY2', 'Si l\'article désiré est en stock mais pas en quantité suffisante et que vous désirez obtenir la quantité en stock avant la totalité, merci de spliter la commande en 2.');
+define('_MA_XMSTOCK_CHECKOUT_WARNINGQTY', 'La quantité demandée pour les composants avec le logo <span class="badge badge-pill badge-warning">Avertissement</span> est supérieure à celle disponible en stock. <br>Le délai de livraison pourrait être plus long !');
+define('_MA_XMSTOCK_CHECKOUT_WARNINGQTY2', 'Si le composant désiré est en stock mais pas en quantité suffisante et que vous désirez obtenir la quantité en stock avant la totalité, merci de spliter la commande en 2.');
 
 // caddy
 define('_MA_XMSTOCK_CADDY_NEEDSYEARS', 'Besoin');
@@ -233,22 +233,22 @@ define('_MA_XMSTOCK_CADDY_AREA', 'Zone de stockage');
 define('_MA_XMSTOCK_CADDY_STEP1', '1- Ajouter au panier');
 define('_MA_XMSTOCK_CADDY_STEP2', '2- Informations sur la commande');
 define('_MA_XMSTOCK_CADDY_STEP3', '3- Confirmer les informations');
-define('_MA_XMSTOCK_CADDY_CONTINUE', 'Continuer la sélection d\'articles');
+define('_MA_XMSTOCK_CADDY_CONTINUE', 'Continuer la sélection de composants');
 define('_MA_XMSTOCK_CADDY_UPDATE', 'Mettre à jour la quantité');
 define('_MA_XMSTOCK_CADDY_STEP1_2', 'Suivant (informations sur la commande)');
 define('_MA_XMSTOCK_CADDY_STEP2_2', 'Suivant (Confirmer les informations)');
 define('_MA_XMSTOCK_CADDY_QUANTITY', 'Quantité');
-define('_MA_XMSTOCK_CADDY_ITMES', 'Articles');
+define('_MA_XMSTOCK_CADDY_ITMES', 'Composants');
 define('_MA_XMSTOCK_CADDY_ERROR_EMPTY', 'Votre panier est vide');
 define('_MA_XMSTOCK_CADDY_ERROR_NOARTICLE', 'L\'élément demandé n\'existe pas ou n\'est pas activé !');
 define('_MA_XMSTOCK_CADDY_ERROR_NOAREA', 'La zone de stockage demandée n\'existe pas ou n\'est pas activée !');
-define('_MA_XMSTOCK_CADDY_ERROR_NOORDER', 'L\'article ne peut pas être commandé (la restriction de commande est activée)');
+define('_MA_XMSTOCK_CADDY_ERROR_NOORDER', 'Le composant ne peut pas être commandé (la restriction de commande est activée)');
 define('_MA_XMSTOCK_CADDY_ERROR_NOPERMISSION', 'Vous n\'êtes pas autorisé à commander dans cette zone de stockage');
-define('_MA_XMSTOCK_CADDY_ERROR_NOLOAN', 'Cette article ne peut pas être emprunter pour le moment!');
-define('_MA_XMSTOCK_CADDY_WARNING_AREA', 'Attention, vous pouvez commander plusieurs articles mais uniquement si ils sont dans le même stock.<br>Si vous voulez commander l\'article ci dessous, il faut faire une autre commande');
+define('_MA_XMSTOCK_CADDY_ERROR_NOLOAN', 'Ce composant ne peut pas être emprunter pour le moment!');
+define('_MA_XMSTOCK_CADDY_WARNING_AREA', 'Attention, vous pouvez commander plusieurs composants mais uniquement si ils sont dans le même stock.<br>Si vous voulez commander le composant ci dessous, il faut faire une autre commande');
 
 // order
-define('_MA_XMSTOCK_ORDER_ARTICLES', 'Articles commandés');
+define('_MA_XMSTOCK_ORDER_ARTICLES', 'Composants commandés');
 define('_MA_XMSTOCK_ORDER_DATECANCELLATION', 'Date d\'annulation');
 define('_MA_XMSTOCK_ORDER_DATEDELIVERY', 'Date de livraison prévue');
 define('_MA_XMSTOCK_ORDER_DATEDELIVERY_R', 'Date de la livraison');
@@ -281,7 +281,7 @@ define('_MA_XMSTOCK_ORDERS', 'Commandes');
 
 // vieworder
 define('_MA_XMSTOCK_VIEWORDER_AMOUNT', 'Quantité');
-define('_MA_XMSTOCK_VIEWORDER_ARTICLE', 'Article');
+define('_MA_XMSTOCK_VIEWORDER_ARTICLE', 'Composant');
 define('_MA_XMSTOCK_VIEWORDER_ORDER', 'Commande #');
 
 // management
@@ -299,21 +299,21 @@ define('_MA_XMSTOCK_MANAGEMENT_VIEW', 'Visualisation d\'une commande');
 define('_MA_XMSTOCK_MANAGEMENT_VIEWALL', 'Visualisation des commandes');
 
 //action.php
-define('_MA_XMSTOCK_ACTION_ARTICLES', 'Articles');
+define('_MA_XMSTOCK_ACTION_ARTICLES', 'Composants');
 define('_MA_XMSTOCK_ACTION_EDIT', 'Edition d\'une commande');
 define('_MA_XMSTOCK_ACTION_EDITSTOCK', 'Edition d\'un stock');
-define('_MA_XMSTOCK_ACTION_INFODELARTICLE', 'Mettre "0" pour supprimer un article');
+define('_MA_XMSTOCK_ACTION_INFODELARTICLE', 'Mettre "0" pour supprimer un composant');
 define('_MA_XMSTOCK_ACTION_NEXT1', 'Formulaire de validation de la commande');
 define('_MA_XMSTOCK_ACTION_NEXT2', 'Formulaire de préparation de la commande');
 define('_MA_XMSTOCK_ACTION_NEXT3', 'Formulaire de livraison de la commande');
 define('_MA_XMSTOCK_ACTION_SPLIT', 'Diviser');
 define('_MA_XMSTOCK_ACTION_SPLIT_AMOUNT', 'Quantité');
-define('_MA_XMSTOCK_ACTION_SPLIT_DESC', 'Les articles sélectionnés dans "Diviser" seront regroupés dans une nouvelle commande. Si la "Quantité" est renseignée à 0, toute la quantité de l\'article sera transférée dans une nouvelle commande. Si la "Quantité" ne contient pas 0, alors la quantité renseignée restera dans cette commande et le solde sera transféré dans la nouvelle commande');
+define('_MA_XMSTOCK_ACTION_SPLIT_DESC', 'Les composants sélectionnés dans "Diviser" seront regroupés dans une nouvelle commande. Si la "Quantité" est renseignée à 0, toute la quantité du composant sera transférée dans une nouvelle commande. Si la "Quantité" ne contient pas 0, alors la quantité renseignée restera dans cette commande et le solde sera transféré dans la nouvelle commande');
 define('_MA_XMSTOCK_ACTION_SPLIT_TEXT', 'Cette commande est une commande divisée (commande d\'origine: %s)');
 define('_MA_XMSTOCK_ACTION_TRANSFERT_REF', 'Commande %s');
 define('_MA_XMSTOCK_ACTION_TRANSFERT_DESC', 'Commande du %s avec le numéro %s');
-define('_MA_XMSTOCK_ACTION_WARNING_STATUS2', 'Une fois ce formulaire validé, les articles seront décomptés du stock!');
-define('_MA_XMSTOCK_ACTION_WARNING_STATUS3', 'Une fois ce formulaire validé, la commande sera considérée comme livrée (articles livrés ou retirés).');
+define('_MA_XMSTOCK_ACTION_WARNING_STATUS2', 'Une fois ce formulaire validé, les composants seront décomptés du stock!');
+define('_MA_XMSTOCK_ACTION_WARNING_STATUS3', 'Une fois ce formulaire validé, la commande sera considérée comme livrée (composants livrés ou retirés).');
 
 // viewprice.php
 define('_MA_XMSTOCK_VIEWPRICE_AMOUNT', 'Quantité transférée');
@@ -330,11 +330,11 @@ define('_MA_XMSTOCK_VIEWPRICE_PRICECHF', 'Prix en CHF');
 define('_MA_XMSTOCK_LOAN_ADD', 'Ajout d\'un prêt');
 define('_MA_XMSTOCK_LOAN_AMOUNT', 'Quantité');
 define('_MA_XMSTOCK_LOAN_AREA', 'Stock');
-define('_MA_XMSTOCK_LOAN_ARTICLE', 'Article à mettre en prêt');
+define('_MA_XMSTOCK_LOAN_ARTICLE', 'Composant à mettre en prêt');
 define('_MA_XMSTOCK_LOAN_DATE', 'Date de l\'emprunt');
 define('_MA_XMSTOCK_LOAN_EDIT', 'Edition d\'un prêt');
 define('_MA_XMSTOCK_LOAN_FORM', 'Formulaire de prêt');
-define('_MA_XMSTOCK_LOAN_LARTICLE', 'Article en prêt');
+define('_MA_XMSTOCK_LOAN_LARTICLE', 'Composant en prêt');
 define('_MA_XMSTOCK_LOAN_LIST', 'Liste des prêts');
 define('_MA_XMSTOCK_LOAN_RDATE', 'Date de retour');
 define('_MA_XMSTOCK_LOAN_STATUS', 'Statut du prêt');
@@ -349,5 +349,5 @@ define('_MA_XMSTOCK_LOAN_USERSLIST', 'Liste des emprunteurs');
 define('_MA_XMSTOCK_OVERDRAFT_ALL', 'Tous les découverts');
 define('_MA_XMSTOCK_OVERDRAFT_AMOUNT', 'Quantité');
 define('_MA_XMSTOCK_OVERDRAFT_AREA', 'Stock');
-define('_MA_XMSTOCK_OVERDRAFT_ARTICLE', 'Article');
-define('_MA_XMSTOCK_OVERDRAFT_NOOVERDRAFT', 'Pas d\'articles en dessous du montant minimum');
+define('_MA_XMSTOCK_OVERDRAFT_ARTICLE', 'Composant');
+define('_MA_XMSTOCK_OVERDRAFT_NOOVERDRAFT', 'Pas de composants en dessous du montant minimum');
